--- a/QuanLyBenXeWebApp/Views/Shared/_Layout.cshtml
+++ b/QuanLyBenXeWebApp/Views/Shared/_Layout.cshtml
@@ -102,6 +102,7 @@
         </script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="~/js/qtv0.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
