--- a/QuanLyBenXeWebApp/Views/Account/Login.cshtml
+++ b/QuanLyBenXeWebApp/Views/Account/Login.cshtml
@@ -13,6 +13,7 @@
         <h3 class="login-title">Đăng nhập tài khoản quản trị viên</h3>
             <section>
 				<form asp-action="login" method="post">
+					<div asp-validation-summary="ModelOnly"></div>
 					<div class="form-group">
 						<label style="color:white!important;">Ký danh:</label>
 						<input type="text" name="UserName" asp-for=UserName />
