--- a/QuanLyBenXeWebApp/Views/QTV0/ViTriDo.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/ViTriDo.cshtml
@@ -1,8 +1,45 @@
-﻿
+﻿@model ViTriDo[]
 @{
 	Layout = "~/Views/Qtv0/_Qtv0Layout.cshtml";
-	ViewData["Title"] = "Quản trị thông tin giao dịch";
+	ViewData["Title"] = "CRUD vị trí đỗ trong bến";
+
 }
 
-<h1>Welcome</h1>
+<h1>@ViewData["Title"]</h1>
+<div class="container">
+	<form method="post">
+		<div class="input-group">
+			<table id="vtd-data-grid" class="table-bordered">
+				<thead>
+					<tr>
+						<th scope="col">Mã vị trí</th>
 
+					</tr>
+				</thead>
+				<tbody>
+					@foreach (ViTriDo viTri in Model)
+					{
+						<tr>
+							<td><input readonly type="text" value="@viTri.MaViTri" /></td>
+
+						</tr>
+					}
+					<tr>
+						<td><input readonly type="text" value="" list="ma-vi-tri" /></td>
+
+					</tr>
+				</tbody>
+			</table>
+			<div class="input-group">
+				<button type="button" id="create-vtd">Tạo mới</button>
+				<button type="button" id="update-vtd">Cập nhật mới</button>
+				<button type="button" id="delete-vtd">Xoá</button>
+			</div>
+			<datalist id="ma-vi-tri">
+				<option>@("MB" + ViewBag.NextViTriId.Substring(2))</option>
+				<option>@("MT" + ViewBag.NextViTriId.Substring(2))</option>
+				<option>@("MN" + ViewBag.NextViTriId.Substring(2))</option>
+			</datalist>
+		</div>
+	</form>
+</div>
