--- a/QuanLyBenXeWebApp/wwwroot/css/site.css
+++ b/QuanLyBenXeWebApp/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 /*here*/
-.wrap-admin {
+.wrap {
 	display: flex;
 	width: 100%;
 	height: 100vh;
@@ -12,7 +12,23 @@ for details on configuring this project to bundle and minify static web assets. 
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-
+.wrap-admin {
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	position: relative;
+	justify-content: center;
+	align-items: center;
+	background-color: #002428;
+}
+.border-between {
+	position: absolute;
+	display: block;
+	background-color: white;
+	height: 400px;
+	width: 2px;
+	z-index:2;
+}
 .opacity-background {
 	position: absolute;
 	height: 100%;
@@ -23,10 +39,7 @@ for details on configuring this project to bundle and minify static web assets. 
 
 .login-block {
 	display: block;
-	height: 80%;
-	width: 400px;
 	position: absolute;
-	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 9999;
 }
 
@@ -73,8 +86,14 @@ a {
 
 .login_btn {
 	color: black;
-	background-color: #ffc312;
-	width: 100px;
+	background-color: #f36820;
+	width: 200px;
+	height:40px;
+	border-radius:10px;
+	border:none;
+	color:white;
+	font-size:18px;
+	text-transform:uppercase;
 }
 
 	.login_btn:hover {
