--- a/QuanLyBenXeWebApp/Views/QTV0/ViTriDo.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/ViTriDo.cshtml
@@ -8,6 +8,7 @@
 <h1>@ViewData["Title"]</h1>
 <div class="container">
 	<form method="post">
+		<div class="text-danger validation-summary"></div>
 		<div class="input-group">
 			<table id="vtd-data-grid" class="table-bordered">
 				<thead>
