--- a/QuanLyBenXeWebApp/Views/Home/TaiXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/TaiXe.cshtml
@@ -10,7 +10,7 @@
 				<h4>@Model.MaTaiXe</h4>
 			</div>
 			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Họ và tên: @Model.ToString() </span></div>
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Giới tính: @Model.GioiTinh </span></div>
+			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Giới tính: @(Model.GioiTinh?"Nam":"Nữ") </span></div>
 			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Nơi Sinh: @Model.NoiSinh </span></div>
 			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Số điện thoại: @Model.Sdt </span></div>
 		</div>
