--- a/QuanLyBenXeWebApp/Views/QTV2/Index.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV2/Index.cshtml
@@ -4,5 +4,5 @@
 }
 <div class="container">
 	<h1>Welcome</h1>
-	<h3>Giao diện quản trị thông tin nhà xe</h3>
+	<h3>Giao diện quản trị thông tin nhà xe @ViewData["TenNhaXe"]</h3>
 </div>
