--- a/QuanLyBenXeWebApp/Views/QTV2/TaiXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV2/TaiXe.cshtml
@@ -1,34 +1,47 @@
-﻿
+﻿@model TaiXe[]
 @{
 	Layout = "~/Views/QTV2/_Qtv2Layout.cshtml";
 	ViewData["Title"] = "Tài xế nhà xe " + ViewData["TenNhaXe"];
 }
 <h1>Chỉnh sửa thông tin tài xế</h1>
-
 <div class="container">
-	<table id="data-grid" class="table-bordered">
-	<thead>
-		<tr>
-			<th scope="col">Mã tài xế</th>
-			<th scope="col">Họ, tên đệm</th>
-			<th scope="col">Tên</th>
-			<th scope="col">Nam giới</th>
-			<th scope="col">Nơi sinh</th>
-			<th scope="col">Số điện thoại</th>
-		</tr>
-	</thead>
-	<tbody>
-		@foreach (TaiXe tx in Model)
-		{
-			<tr>
-				<td><input type="text" value="@tx.MaTaiXe" /></td>
-				<td><input type="text" value="@tx.HoDem" /></td>
-				<td><input type="text" value="@tx.Ten" /></td>
-				<td><input type="checkbox" checked="@tx.NamGioi" /></td>
-				<td><input type="text" value="@tx.NoiSinh" /></td>
-				<td><input type="text" value="@tx.Sdt" /></td>
-			</tr>
-		}
-	</tbody>
-</table>
+		<div class="text-danger validation-summary"></div>
+		<table id="data-grid" class="table-bordered">
+			<thead>
+				<tr>
+					<th scope="col">Mã tài xế</th>
+					<th scope="col">Họ, tên đệm</th>
+					<th scope="col">Tên</th>
+					<th scope="col">Nam giới</th>
+					<th scope="col">Nơi sinh</th>
+					<th scope="col">Số điện thoại</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (TaiXe tx in Model)
+				{
+					<tr>
+						<td><input readonly type="text" value="@tx.MaTaiXe" /></td>
+						<td><input readonly type="text" value="@tx.HoDem" /></td>
+						<td><input readonly type="text" value="@tx.Ten" /></td>
+						<td><input type="checkbox" @(tx.GioiTinh ? "checked" : "") /></td>
+						<td><input readonly type="text" value="@tx.NoiSinh" /></td>
+						<td><input readonly type="text" value="@tx.Sdt" /></td>
+					</tr>
+				}
+					<tr>
+						<td><input readonly type="text" value="@ViewBag.NextTaiXeId" /></td>
+						<td><input readonly type="text" value="" /></td>
+						<td><input readonly type="text" value="" /></td>
+						<td><input readonly type="checkbox" value="" /></td>
+						<td><input readonly type="text" value="" /></td>
+						<td><input readonly type="text" value="" /></td>
+					</tr>
+			</tbody>
+		</table>
+		<div class="input-group">
+			<button type="button" id="create-tx">Tạo mới</button>
+			<button type="button" id="update-tx">Cập nhật mới</button>
+			<button type="button" id="delete-tx">Xoá</button>
+		</div>
 </div>
