--- a/QuanLyBenXeWebApp/Views/Home/Index.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="search-block">
             <div class="container">
                 <div class="row">
-                    <h2 class="search-title col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <h2 class="search-title col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" style="color:black;">
                         Chào mừng đến với bến xe trung tâm TP.Đà Nẵng
                     </h2>
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
@@ -22,7 +22,7 @@
                                 {
                                     <option>@(diemDung.TenTinhTp)</option>
                                 }
-                            </datalist>foreach
+                            </datalist>
                         </div>
                     </div>
                     <div class=" col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
@@ -54,7 +54,7 @@
                                         {
                                             <option>@(nhaXe.TenNhaXe)</option>
                                         }
-                                    </select>foreach
+                                    </select>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -117,22 +117,22 @@
 								<div class="row">
 									<div class="col-md-3">
 										<a href="#">
-											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+											<img src="../public/assets/img/layer1.png" alt="Image" style="max-width:100%;" class="img-item">
 										</a>
 									</div>
 									<div class="col-md-3">
 										<a href="#">
-											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+											<img src="../public/assets/img/layer2.png" alt="Image" style="max-width:100%;" class="img-item">
 										</a>
 									</div>
 									<div class="col-md-3">
 										<a href="#">
-											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+											<img src="../public/assets/img/layer3.png" alt="Image" style="max-width:100%;" class="img-item">
 										</a>
 									</div>
 									<div class="col-md-3">
 										<a href="#">
-											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+											<img src="../public/assets/img/layer4.png" alt="Image" style="max-width:100%;" class="img-item">
 										</a>
 									</div>
 								</div>
@@ -144,22 +144,22 @@
 								<div class="row">
 									<div class="col-md-3">
 										<a href="#">
-											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+											<img src="../public/assets/img/layer5.png" alt="Image" style="max-width:100%;" class="img-item">
 										</a>
 									</div>
 									<div class="col-md-3">
 										<a href="#">
-											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+											<img src="../public/assets/img/layer6.png" alt="Image" style="max-width:100%;" class="img-item">
 										</a>
 									</div>
 									<div class="col-md-3">
 										<a href="#">
-											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+											<img src="../public/assets/img/layer7.png" alt="Image" style="max-width:100%;" class="img-item">
 										</a>
 									</div>
 									<div class="col-md-3">
 										<a href="#">
-											<img src="http://placehold.it/250x250" alt="Image" style="max-width:100%;">
+											<img src="../public/assets/img/layer8.png" alt="Image" style="max-width:100%;" class="img-item">
 										</a>
 									</div>
 								</div>
