--- a/QuanLyBenXeWebApp/Views/Shared/_Layout.cshtml
+++ b/QuanLyBenXeWebApp/Views/Shared/_Layout.cshtml
@@ -4,11 +4,12 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>@ViewData["Title"] - Bến xe Đà Nẵng</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
 		  integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
 		  crossorigin="anonymous">
 	<environment include="Development">
 		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+
 	</environment>
 	<environment exclude="Development">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -17,11 +18,13 @@
 			  crossorigin="anonymous"
 			  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
 	</environment>
-	<link rel="stylesheet" href="~/css/site.css" />
+	<environment include="Development">
+		<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+	</environment>
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark box-shadow fixed-top mb-3">
+		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light box-shadow fixed-top mb-3">
 			<div class="container">
 				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> <i class="fas fa-bus"></i> BẾN XE</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -36,7 +39,7 @@
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								Nhà xe
+								Nhà xe &nbsp;
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 								<a class="dropdown-item" href="#">Nhà xe Miền Bắc</a>
@@ -46,8 +49,8 @@
 								<a class="dropdown-item" href="#">Nhà xe porsche 911</a>
 							</div>
 						</li>
-						<li class="nav-item">
-							<button type="button" class="btn btn-light"><i class="fas fa-phone"></i> Hotline</button>
+						<li class="nav-item ml-3 mr-3">
+							<button type="button" class="btn btn-danger"><i class="fas fa-phone"></i> Hotline</button>
 						</li>
 						@{
 							if (User.Identity.IsAuthenticated)
@@ -103,7 +106,6 @@
 	</environment>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	<script src="~/js/qtv0.js"></script>
-	<script src="~/js/qtv2.js"></script>
 
 	@RenderSection("Scripts", required: false)
 </body>
