--- a/QuanLyBenXeWebApp/Views/Shared/_Layout.cshtml
+++ b/QuanLyBenXeWebApp/Views/Shared/_Layout.cshtml
@@ -106,6 +106,7 @@
 	</environment>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	<script src="~/js/qtv0.js"></script>
+	<script src="~/js/qtv2.js"></script>
 
 	@RenderSection("Scripts", required: false)
 </body>
